--- a/sistemi.html
+++ b/sistemi.html
@@ -101,7 +101,7 @@
 
     <!-- Sezione immagine in alto - testo in basso -->
     <div class="container my-5 text-center">
-        <img src="/img/Sistemi/immagine_centrale.svg" class="img-fluid px-3 mb-4" alt="Lampada Sammanlänkad">
+        <img src="/img/Sistemi/immagine_centrale.svg" class="img-fluid px-3 mb-4" alt="sistemi informativi">
 
         <div class="row justify-content-center">
             <div class="col-md-8 col-12">
@@ -132,8 +132,8 @@
     <!-- Sezione immagini -->
     <div
         class="align-items-center d-flex flex-column gap-4 justify-content-center my-4 w-100">
-        <img src="/img/Sistemi/diagram3.svg" class="img-fluid px-3" style="max-width: 650px;" alt="Moodboard">
-        <img src="/img/Sistemi/diagram4.svg" class="img-fluid px-3" style="max-width: 650px;" alt="Moodboard">
+        <img src="/img/Sistemi/diagram3.svg" class="img-fluid px-3" style="max-width: 650px;" alt="cmmn">
+        <img src="/img/Sistemi/diagram4.svg" class="img-fluid px-3" style="max-width: 650px;" alt="cmmn">
     </div>
 
     <!-- Sezione il mio contributo -->
