Added mbRunners and volantino pages

--- a/cvedi.html
+++ b/cvedi.html
@@ -149,7 +149,7 @@
             specialmente quelle legate alla implementazione.</p>
     </div>
 
-    <!-- Sezione immagine 404 -->
+    <!-- Sezione immagine -->
     <div class="align-items-center d-flex flex-column gap-4 justify-content-center px-5 my-4 w-100">
         <img src="/img/CVeDI/home.svg" class="img-fluid px-5" alt="home">
         <img src="/img/CVeDI/info_dettagliate.svg" class="img-fluid px-5" alt="info dettagliate">
