--- a/cvedi.html
+++ b/cvedi.html
@@ -35,9 +35,9 @@
                 <li class="nav-item ps-4 ps-md-0 pt-3 pt-md-0"><a class="h4 text-decoration-none white-text-title"
                         href="index.html">Home</a></li>
                 <li class="nav-item ps-4 ps-md-0 pt-3 pt-md-0"><a class="h4 text-decoration-none white-text-title"
-                        href="#">About</a></li>
+                        href="index.html#aboutme">About</a></li>
                 <li class="nav-item ps-4 ps-md-0 py-3 py-md-0"><a class="h4 text-decoration-none white-text-title"
-                        href="#">Projects</a></li>
+                        href="index.html#image-text-slider">Projects</a></li>
             </ul>
         </div>
     </nav>
@@ -74,7 +74,7 @@
                     sviluppo in un'ottica human-centered. Il progetto dovrà inoltre essere corredato dai materiali di
                     analisi e di ricerca e dal design system che ne permetta il successivo sviluppo e manutenzione.
 
-                <h4 class="white-text-title">Tema</h4>
+                <h4 class="white-text-title pt-3">Tema</h4>
                 <p class="white-text mb-3">Brief di Progetto: Interfaccia Totem Informativo per Turisti su Terra
                     C-137<br>
                     Terra C-137 è un pianeta parallelo alla Terra (appartenente ad un altro multiverso), dove la storia
