--- a/webApp.html
+++ b/webApp.html
@@ -35,9 +35,9 @@
                 <li class="nav-item ps-4 ps-md-0 pt-3 pt-md-0"><a class="h4 text-decoration-none white-text-title"
                         href="index.html">Home</a></li>
                 <li class="nav-item ps-4 ps-md-0 pt-3 pt-md-0"><a class="h4 text-decoration-none white-text-title"
-                        href="#">About</a></li>
+                        href="index.html#aboutme">About</a></li>
                 <li class="nav-item ps-4 ps-md-0 py-3 py-md-0"><a class="h4 text-decoration-none white-text-title"
-                        href="#">Projects</a></li>
+                        href="index.html#image-text-slider">Projects</a></li>
             </ul>
         </div>
     </nav>
@@ -73,7 +73,7 @@
                     interattiva. E' necessario fornire una documentazione tecnica e rendere accessibile il codice
                     sorgente tramite GitHub.</p>
 
-                <h4 class="white-text-title">Tema</h4>
+                <h4 class="white-text-title pt-3">Tema</h4>
                 <p class="white-text mb-3">Realizzare un’applicazione web che utilizzi dati provenienti da un servizio
                     esterno (almeno in parte). Tema a scelta.</p>
 
