--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
                     tecnologie e linguaggi. Ho creato questo sito con lo scopo di illustrare brevemente quello su cui ho
                     lavorato.
                 </p>
-                <div class="d-flex align-items-center justify-content-center justify-content-md-start w-100">
-                    <button class="border-0 d-flex light-blue-btn">
-                    </button>
-                </div>
+                <a href="#image-text-slider" class="d-flex align-items-center justify-content-center justify-content-md-start w-100 text-decoration-none">
+                    <div class="border-0 d-flex light-blue-btn">
+                    </div>
+                </a>
             </div>
         </div>
     </div>
@@ -94,7 +94,7 @@
                     <h6 class="blue-text-title pt-2">Liceo delle scienze umane</h6>
                     <h6 class="black-text-title pb-2">IIS Bachelet - Abbiategrasso</h6>
                     <p class="black-text">
-                        Ho frequentato il Liceo delle Scienze Umane dall'anno 2015 fino al 2020, ho scelto questo
+                        Ho frequentato il Liceo delle Scienze Umane dall'anno 2015 fino al 2020. Ho scelto questo
                         percorso perchè mi affiscinava l'idea di studiare il comportamento delle
                         persone. <br>
                         Durante gli anni del liceo ho potuto approfondire materie come psicologia, pedagogia, sociologia
@@ -116,14 +116,11 @@
                     <h6 class="blue-text-title pt-2">Corso di laurea triennale</h6>
                     <h6 class="black-text-title pb-2">Informatica</h6>
                     <p class="black-text">
-                        Ho frequentato il Liceo delle Scienze Umane dall'anno 2015 fino al 2020, ho scelto questo
-                        percorso perchè mi affiscinava l'idea di studiare il comportamento delle
-                        persone. <br>
-                        Durante gli anni del liceo ho potuto approfondire materie come psicologia, pedagogia, sociologia
-                        e antropologia, ma allo stesso tempo mi sono avvicinata anche tanto alle materie scientifiche,
-                        motivo per cui in triennale ho scelto di intraprendere una strada differente.
-
-
+                        Ho frequentato il corso triennale di Informatica presso l'Università degli Studi di
+                        Milano-Bicocca dall’anno accademico 2020/2021 al 2022/2023. È stato un percorso impegnativo e
+                        non sono mancate difficoltà, ma questi anni mi hanno permesso di costruire una solida base nella
+                        materia. I corsi che ho apprezzato maggiormente sono stati quelli legati alla programmazione in
+                        Java, alla programmazione di dispositivi mobili e all’interazione uomo-macchina.
                     </p>
                 </div>
                 <div class="col-md-3 col-12 diamond rounded-2 my-4 my-md-0">
@@ -140,12 +137,12 @@
                     <h6 class="blue-text-title pt-2">Corso di laurea magistrale</h6>
                     <h6 class="black-text-title pb-2">Teoria e Tecnologia della Comunicazione</h6>
                     <p class="black-text">
-                        Ho frequentato il Liceo delle Scienze Umane dall'anno 2015 fino al 2020, ho scelto questo
-                        percorso perchè mi affiscinava l'idea di studiare il comportamento delle
-                        persone. <br>
-                        Durante gli anni del liceo ho potuto approfondire materie come psicologia, pedagogia, sociologia
-                        e antropologia, ma allo stesso tempo mi sono avvicinata anche tanto alle materie scientifiche,
-                        motivo per cui in triennale ho scelto di intraprendere una strada differente.
+                        Mi sono iscritta a questo corso magistrale presso l’Università di Milano-Bicocca nell’anno
+                        accademico 2023/2024, subito dopo la triennale, e attualmente sono laureanda.
+                        Ho scelto questo percorso per unire i miei interessi principali: psicologia e informatica.
+                        Tra le materie che più mi hanno appassionata vi sono realtà virtuale, applicazioni web,
+                        comunicazione visiva e psicologia delle influenze sociali. Attualmente sto scrivendo la tesi,
+                        voto di partenza 104/110.
                     </p>
                 </div>
                 <div class="col-sm-3 col-12 diamond rounded-2 my-4 my-sm-0">
@@ -506,7 +503,7 @@
                 </div>
             </div>
 
-            <h6 class="col-12 pt-4 text-center">Riga della privacy</h6>
+            <h6 class="col-12 pt-4 text-center">© 2025 Michela Mariani - Tutti i diritti riservati</h6>
         </div>
     </footer>
 
