--- a/sam.html
+++ b/sam.html
@@ -35,9 +35,9 @@
                 <li class="nav-item ps-4 ps-md-0 pt-3 pt-md-0"><a class="h4 text-decoration-none white-text-title"
                         href="index.html">Home</a></li>
                 <li class="nav-item ps-4 ps-md-0 pt-3 pt-md-0"><a class="h4 text-decoration-none white-text-title"
-                        href="#">About</a></li>
+                        href="index.html#aboutme">About</a></li>
                 <li class="nav-item ps-4 ps-md-0 py-3 py-md-0"><a class="h4 text-decoration-none white-text-title"
-                        href="#">Projects</a></li>
+                        href="index.html#image-text-slider">Projects</a></li>
             </ul>
         </div>
     </nav>
@@ -79,7 +79,7 @@
                     <li>Pagina a tema libero</li>
                 </ul>
 
-                <h4 class="white-text-title">Tema</h4>
+                <h4 class="white-text-title pt-3">Tema</h4>
                 <p class="white-text mb-3">Realizzare un mini-sito gadget che sponsorizzi un particolare prodotto IKEA.
                 </p>
 
