--- a/sistemi.html
+++ b/sistemi.html
@@ -35,9 +35,9 @@
                 <li class="nav-item ps-4 ps-md-0 pt-3 pt-md-0"><a class="h4 text-decoration-none white-text-title"
                         href="index.html">Home</a></li>
                 <li class="nav-item ps-4 ps-md-0 pt-3 pt-md-0"><a class="h4 text-decoration-none white-text-title"
-                        href="#">About</a></li>
+                        href="index.html#aboutme">About</a></li>
                 <li class="nav-item ps-4 ps-md-0 py-3 py-md-0"><a class="h4 text-decoration-none white-text-title"
-                        href="#">Projects</a></li>
+                        href="index.html#image-text-slider">Projects</a></li>
             </ul>
         </div>
     </nav>
@@ -74,7 +74,7 @@
                     attività operative, definire la struttura del sistema informativo per gestirle e rappresentare
                     graficamente i flussi di lavoro, i casi d'uso e l'interfaccia utente.
 
-                <h4 class="white-text-title">Tema</h4>
+                <h4 class="white-text-title pt-3">Tema</h4>
                 <p class="white-text mb-3">Modellare i processi di Consegna Pizza e Rapporto con i Fornitori della
                     Pizzeria "La Cometa" utilizzando le notazioni BPMN, CMMN, DMN e IFML.
                 </p>
