--- a/vr.html
+++ b/vr.html
@@ -35,9 +35,9 @@
                 <li class="nav-item ps-4 ps-md-0 pt-3 pt-md-0"><a class="h4 text-decoration-none white-text-title"
                         href="index.html">Home</a></li>
                 <li class="nav-item ps-4 ps-md-0 pt-3 pt-md-0"><a class="h4 text-decoration-none white-text-title"
-                        href="#">About</a></li>
+                        href="index.html#aboutme">About</a></li>
                 <li class="nav-item ps-4 ps-md-0 py-3 py-md-0"><a class="h4 text-decoration-none white-text-title"
-                        href="#">Projects</a></li>
+                        href="index.html#image-text-slider">Projects</a></li>
             </ul>
         </div>
     </nav>
@@ -74,7 +74,7 @@
                     oggetti, l'uso di animazioni, la fisica e la navigazione dell'utente all'interno dell'ambiente 3D. È
                     fondamentale fornire istruzioni chiare e una documentazione completa.
                 </p>
-                <h4 class="white-text-title">Tema</h4>
+                <h4 class="white-text-title pt-3">Tema</h4>
                 <p class="white-text mb-3">Una qualsiasi applicazione in Realtà Virtuale
 
 
