--- a/webApp.html
+++ b/webApp.html
@@ -189,42 +189,42 @@
     <footer>
         <div class="m-0 p-5 row w-100 white-text-title footer">
             <!-- Link -->
-            <div class="align-items-center col-12 col-sm-8 d-flex justify-content-center justify-content-sm-start">
-                <ul class="list-unstyled text-center text-sm-start">
-                    <li class="pb-3"><a href="#" class="h4 text-decoration-none">Home</a></li>
-                    <li class="pb-3"><a href="#" class="h4 text-decoration-none">About Me</a></li>
-                    <li class="pb-3"><a href="#" class="h4 text-decoration-none">Projects</a></li>
+            <div class="align-items-center col-12 col-md-8 d-flex justify-content-center justify-content-md-start">
+                <ul class="list-unstyled text-center text-md-start">
+                    <li class="pb-3"><a href="index.html" class="h4 text-decoration-none">Home</a></li>
+                    <li class="pb-3"><a href="index.html#aboutme" class="h4 text-decoration-none">About Me</a></li>
+                    <li class="pb-3"><a href="index.html#image-text-slider" class="h4 text-decoration-none">Projects</a></li>
                 </ul>
             </div>
 
             <!-- Social -->
             <div
-                class="align-items-center col-12 col-sm-4 d-flex justify-content-center justify-content-sm-start text-center text-sm-start socialCol">
-                <div class="d-block row">
-                    <div class="align-items-center col d-flex gap-3 justify-content-center pb-3">
-                        <a href="#" class="social-link" data-hover="instagramHover.png">
-                            <img src="icons/instagram.svg" class="iconFooter" alt="Instagram">
+                class="align-items-center col-12 col-md-4 d-flex justify-content-center justify-content-md-start text-center text-md-start socialCol">
+                <div class="d-block row align-items-center justify-content-center">
+                    <div class="align-items-center col d-flex gap-3 pb-3">
+                        <a href="mailto:michela.mariani01@gmail.com" target="_blank" class="social-link" data-hover="instagramHover.png">
+                            <img src="icons/gmail.svg" class="iconFooter" alt="Instagram">
                         </a>
-                        <a href="#" class="mb-0 text-decoration-none white-text-title">only.miki</a>
+                        <a href="mailto:michela.mariani01@gmail.com" target="_blank" class="mb-0 text-decoration-none white-text-title">michela.mariani01</a>
                     </div>
 
-                    <div class="align-items-center col d-flex gap-3 justify-content-center pb-3">
-                        <a href="#" class="social-link" data-hover="linkedinHover.png">
+                    <div class="align-items-center col d-flex gap-3 pb-3">
+                        <a href="https://www.linkedin.com/in/michela-mariani-6a2372271/" class="social-link" target="_blank" data-hover="linkedinHover.png">
                             <img src="icons/linkedin.svg" class="iconFooter" alt="LinkedIn">
                         </a>
-                        <a href="#" class="mb-0 text-decoration-none white-text-title">only.miki</a>
+                        <a href="https://www.linkedin.com/in/michela-mariani-6a2372271/" target="_blank" class="mb-0 text-decoration-none white-text-title">Michela Mariani</a>
                     </div>
 
-                    <div class="align-items-center col d-flex gap-3 justify-content-center pb-3">
-                        <a href="#" class="social-link" data-hover="gitHover.png">
+                    <div class="align-items-center col d-flex gap-3 pb-3">
+                        <a href="https://github.com/onlymiki" class="social-link" target="_blank" data-hover="gitHover.png">
                             <img src="icons/github.svg" class="iconFooter" alt="GitHub">
                         </a>
-                        <a href="#" class="mb-0 text-decoration-none white-text-title">only.miki</a>
+                        <a href="https://github.com/onlymiki" target="_blank" class="mb-0 text-decoration-none white-text-title">only.miki</a>
                     </div>
                 </div>
             </div>
 
-            <h6 class="col-12 pt-4 text-center">Riga della privacy</h6>
+            <h6 class="col-12 pt-4 text-center">© 2025 Michela Mariani - Tutti i diritti riservati</h6>
         </div>
     </footer>
 
