--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css">
-
+    <link rel="shortcut icon" href="/icons/logo.svg" type="image/x-icon">
 </head>
 
 <body class="bg-blue">
@@ -45,7 +45,7 @@
     <!-- Home -->
     <div class="container my-5">
         <div class="align-items-center d-md-flex gap-5 justify-content-center text-center text-md-start">
-            <img src="img/immagine_curriculum.svg" class="img-fluid img-home pb-2 pb-md-0">
+            <img src="img/immagine_curriculum.svg" class="img-fluid img-home pb-2 pb-md-0" alt="foto profilo">
             <div>
                 <h4 class="orange-text-title">Michela Mariani</h4>
                 <h5 class="pb-2 white-text-title">24 anni</h5>
@@ -58,7 +58,7 @@
                     personali per migliorare continuamente le mie
                     abilità. Cerco lavoro come sviluppatrice front-end,
                     mi interessa molto tutto quello che riguarda il
-                    mondo UI/UX.<br />
+                    mondo UI/UX. <br>
                     Nel corso del mio percorso universitario ho svolto diversi progetti e utilizzato differenti
                     tecnologie e linguaggi. Ho creato questo sito con lo scopo di illustrare brevemente quello su cui ho
                     lavorato.
@@ -81,7 +81,7 @@
             <!-- immagine decorativa assoluta -->
             <img src="/img/prova.svg" alt="decorazione"
                 class="decoration d-none d-md-flex position-absolute start-0 translate-middle-y"
-                style="width:30px; z-index:10;">
+                style="width:28px; z-index:10;">
 
             <div class="orange-diamonds position-absolute start-0 d-none d-md-block">
                 <div class="diamond-shape diamond1"></div>
@@ -158,8 +158,8 @@
 
     <!-- Sezione skills -->
     <div class="d-md-flex d-none justify-content-around position-absolute star1 z-2 w-100">
-        <img src="/img/blue_star.svg" style="width: 50px;">
-        <img src="/img/blue_star.svg" style="width: 50px;">
+        <img src="/img/blue_star.svg" style="width: 50px;" alt="blue star">
+        <img src="/img/blue_star.svg" style="width: 50px;" alt="blue star">
     </div>
     <div class="white-background py-5 ">
         <!-- Idea per ora: due colonne una con linguaggi e stelline, dall'altro software -->
@@ -213,13 +213,13 @@
                     <h5 class="blue-text-title pt-4 pt-sm-0 ps-sm-4 text-center text-md-start">Strumenti e tecnologie
                     </h5>
                     <div class="d-flex flex-wrap gap-5 justify-content-center justify-content-sm-start pt-4 ps-sm-4">
-                        <img src="icons/bootstrap.svg" style="width: 40px">
-                        <img src="icons/unity.svg" style="width: 40px">
-                        <img src="icons/figma.svg" style="width: 40px">
+                        <img src="icons/bootstrap.svg" style="width: 40px" alt="Bootstrap">
+                        <img src="icons/unity.svg" style="width: 40px" alt="Unity">
+                        <img src="icons/figma.svg" style="width: 40px" alt="Figma">
                     </div>
                     <div class="d-flex flex-wrap gap-5 justify-content-center justify-content-sm-start pt-4 ps-sm-4">
-                        <img src="icons/react.svg" style="width: 40px">
-                        <img src="icons/wordpress.svg" style="width: 40px">
+                        <img src="icons/react.svg" style="width: 40px" alt="React">
+                        <img src="icons/wordpress.svg" style="width: 40px" alt="WordPress">
                     </div>
 
                     <div class="align-items-center d-flex justify-content-between px-2 px-sm-0 pt-4 ps-sm-4">
@@ -468,8 +468,8 @@
     <footer>
         <div class="m-0 p-5 row w-100 white-text-title footer">
             <!-- Link -->
-            <div class="align-items-center col-12 col-sm-8 d-flex justify-content-center justify-content-sm-start">
-                <ul class="list-unstyled text-center text-sm-start">
+            <div class="align-items-center col-12 col-md-8 d-flex justify-content-center justify-content-md-start">
+                <ul class="list-unstyled text-center text-md-start">
                     <li class="pb-3"><a href="index.html" class="h4 text-decoration-none active">Home</a></li>
                     <li class="pb-3"><a href="#aboutme" class="h4 text-decoration-none">About Me</a></li>
                     <li class="pb-3"><a href="#image-text-slider" class="h4 text-decoration-none">Projects</a></li>
@@ -478,27 +478,27 @@
 
             <!-- Social -->
             <div
-                class="align-items-center col-12 col-sm-4 d-flex justify-content-center justify-content-sm-start text-center text-sm-start socialCol">
-                <div class="d-block row">
-                    <div class="align-items-center col d-flex gap-3 justify-content-center pb-3">
-                        <a href="#" class="social-link" data-hover="instagramHover.png">
-                            <img src="icons/instagram.svg" class="iconFooter" alt="Instagram">
+                class="align-items-center col-12 col-md-4 d-flex justify-content-center justify-content-md-start text-center text-md-start socialCol">
+                <div class="d-block row align-items-center justify-content-center">
+                    <div class="align-items-center col d-flex gap-3 pb-3">
+                        <a href="mailto:michela.mariani01@gmail.com" target="_blank" class="social-link" data-hover="instagramHover.png">
+                            <img src="icons/gmail.svg" class="iconFooter" alt="Instagram">
                         </a>
-                        <a href="#" class="mb-0 text-decoration-none white-text-title">only.miki</a>
+                        <a href="mailto:michela.mariani01@gmail.com" target="_blank" class="mb-0 text-decoration-none white-text-title">michela.mariani01</a>
                     </div>
 
-                    <div class="align-items-center col d-flex gap-3 justify-content-center pb-3">
-                        <a href="#" class="social-link" data-hover="linkedinHover.png">
+                    <div class="align-items-center col d-flex gap-3 pb-3">
+                        <a href="https://www.linkedin.com/in/michela-mariani-6a2372271/" class="social-link" target="_blank" data-hover="linkedinHover.png">
                             <img src="icons/linkedin.svg" class="iconFooter" alt="LinkedIn">
                         </a>
-                        <a href="#" class="mb-0 text-decoration-none white-text-title">only.miki</a>
+                        <a href="https://www.linkedin.com/in/michela-mariani-6a2372271/" target="_blank" class="mb-0 text-decoration-none white-text-title">Michela Mariani</a>
                     </div>
 
-                    <div class="align-items-center col d-flex gap-3 justify-content-center pb-3">
-                        <a href="#" class="social-link" data-hover="gitHover.png">
+                    <div class="align-items-center col d-flex gap-3 pb-3">
+                        <a href="https://github.com/onlymiki" class="social-link" target="_blank" data-hover="gitHover.png">
                             <img src="icons/github.svg" class="iconFooter" alt="GitHub">
                         </a>
-                        <a href="#" class="mb-0 text-decoration-none white-text-title">only.miki</a>
+                        <a href="https://github.com/onlymiki" target="_blank" class="mb-0 text-decoration-none white-text-title">only.miki</a>
                     </div>
                 </div>
             </div>
