--- a/ergonomia.html
+++ b/ergonomia.html
@@ -10,7 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css">
-
+    <link rel="shortcut icon" href="/icons/logo.svg" type="image/x-icon">
 </head>
 
 <body class="bg-blue">
@@ -18,7 +18,7 @@
     <!-- Header -->
     <nav class="navbar navbar-expand-md px-md-4 p-0 header">
         <!-- Logo -->
-        <a class="navbar-brand ps-4" href="#">
+        <a class="navbar-brand ps-4" href="index.html">
             <img src="icons/logo.svg" alt="logo" style="height: 40px;">
         </a>
 
@@ -45,7 +45,8 @@
     <!-- Sezione presentazione progetto iniziale -->
     <div class="container my-5 px-5">
         <div class="align-items-center justify-content-center text-center text-md-start row">
-            <img src="img/miniatura_ergonomia.svg" class="col-12 col-md-6 img-fluid img-portrait pb-2 pb-md-0">
+            <img src="img/miniatura_ergonomia.svg" class="col-12 col-md-6 img-fluid img-portrait pb-2 pb-md-0"
+                alt="miniatura progetto">
             <div class="col-12 col-md-6 display-5 white-text-title">
                 PROGETTO ERGONOMIA COGNITIVA
             </div>
@@ -95,12 +96,12 @@
 
     <!-- Separatore -->
     <div class="d-flex justify-content-center w-100">
-        <img src="/icons/diamante_stella.svg" class="img-fluid px-3">
+        <img src="/icons/diamante_stella.svg" class="img-fluid px-3" alt="separatore">
     </div>
 
     <!-- Sezione immagine in alto - testo in basso -->
     <div class="container my-5 text-center">
-        <img src="/img/Egonomia/cosmetici.svg" class="img-fluid px-3 mb-4" alt="Lampada Sammanlänkad">
+        <img src="/img/Egonomia/cosmetici.svg" class="img-fluid px-3 mb-4" alt="immagine centrale, cosmetici">
 
         <div class="row justify-content-center">
             <div class="col-md-8 col-12">
@@ -108,7 +109,8 @@
                     Io e il mio gruppo abbiamo scelto come argomento da analizzare e portare come progetto per il corso
                     di Ergonomia
                     Cognitiva la skincare ovvero la cura della pelle.
-                    In particolare, abbiamo sviluppato un prototipo di una applicazione chiamata Peachy in grado di aiutare gli utenti a
+                    In particolare, abbiamo sviluppato un prototipo di una applicazione chiamata Peachy in grado di
+                    aiutare gli utenti a
                     prendersi cura della propria pelle, questo mettendo in pratica le tecniche imparate a lezione e
                     ponendo al primo posto gli utenti stessi.
                 </p>
@@ -130,8 +132,8 @@
     <!-- Sezione immagini -->
     <div
         class="align-items-md-start align-items-center d-flex flex-column flex-md-row gap-4 justify-content-center  my-4 w-100">
-        <img src="/img/Egonomia/Profilo.svg" class="img-fluid px-3" style="max-width: 350px;" alt="Moodboard">
-        <img src="/img/Egonomia/cerca.svg" class="img-fluid px-3" style="max-width: 350px;" alt="Esempio pagina">
+        <img src="/img/Egonomia/Profilo.svg" class="img-fluid px-3" style="max-width: 350px;" alt="esempio">
+        <img src="/img/Egonomia/cerca.svg" class="img-fluid px-3" style="max-width: 350px;" alt="esempio">
     </div>
 
     <!-- Sezione il mio contributo -->
@@ -145,13 +147,13 @@
 
     <!-- Sezione immagine 404 -->
     <div class="container d-flex flex-column justify-content-center mb-5 w-100">
-        <img src="/img/Egonomia/user_personas1.svg" class="img-fluid px-3 mb-3">
-        <img src="/img/Egonomia/user_personas2.svg" class="img-fluid px-3">
+        <img src="/img/Egonomia/user_personas1.svg" class="img-fluid px-3 mb-3" alt="user personas">
+        <img src="/img/Egonomia/user_personas2.svg" class="img-fluid px-3" alt="user personas">
     </div>
 
     <!-- Separatore -->
     <div class="d-flex justify-content-center w-100">
-        <img src="/icons/diamante_stella.svg" class="img-fluid px-3">
+        <img src="/icons/diamante_stella.svg" class="img-fluid px-3" alt="separatore">
     </div>
 
     <!-- PDF -->
@@ -173,7 +175,8 @@
                     class="white-text-title h5 text-decoration-none">Clicca qui per aprire il PDF</a>
             </div>
             <div class="align-items-center col-md-6 d-none d-md-flex justify-content-center">
-                <img src="/img/Egonomia/cosmetici2.png" class="img-fluid img-portrait">
+                <img src="/img/Egonomia/cosmetici2.png" class="img-fluid img-portrait"
+                    alt="immagine laterale cosmetici">
             </div>
         </div>
 
@@ -182,9 +185,20 @@
     <!-- Sezione torna alla home -->
     <div class="container d-flex justify-content-center my-5 pt-5">
         <div class="d-flex justify-content-center justify-content-sm-start">
-            <img src="icons/white_star.svg" class="pe-3">
-            <a href="index.html" class="h4 white-text-title text-decoration-none">Torna alla Home</a>
-            <img src="icons/white_star.svg" class="ps-3">
+            <img src="icons/white_star.svg" class="pe-3" alt="decorazione">
+            <a href="index.html" class="h4 white-text-title text-decoration-none text-center">Torna alla Home</a>
+            <img src="icons/white_star.svg" class="ps-3" alt="decorazione">
+        </div>
+    </div>
+
+    <div class="container d-flex justify-content-center my-5 pt-5">
+        <div class="d-flex justify-content-between w-100">
+            <a href="sam.html" class="h6 white-text-title text-decoration-none text-center">
+                <img src="icons/arrow_left.svg" alt="freccia"> Precedente
+            </a>
+            <a href="sistemi.html" class="h6 white-text-title text-decoration-none text-center">
+                Successivo <img src="icons/arrow_right.svg" alt="freccia">
+            </a>
         </div>
     </div>
 
@@ -196,7 +210,8 @@
                 <ul class="list-unstyled text-center text-md-start">
                     <li class="pb-3"><a href="index.html" class="h4 text-decoration-none">Home</a></li>
                     <li class="pb-3"><a href="index.html#aboutme" class="h4 text-decoration-none">About Me</a></li>
-                    <li class="pb-3"><a href="index.html#image-text-slider" class="h4 text-decoration-none">Projects</a></li>
+                    <li class="pb-3"><a href="index.html#image-text-slider" class="h4 text-decoration-none">Projects</a>
+                    </li>
                 </ul>
             </div>
 
@@ -205,24 +220,30 @@
                 class="align-items-center col-12 col-md-4 d-flex justify-content-center justify-content-md-start text-center text-md-start socialCol">
                 <div class="d-block row align-items-center justify-content-center">
                     <div class="align-items-center col d-flex gap-3 pb-3">
-                        <a href="mailto:michela.mariani01@gmail.com" target="_blank" class="social-link" data-hover="instagramHover.png">
+                        <a href="mailto:michela.mariani01@gmail.com" target="_blank" class="social-link"
+                            data-hover="instagramHover.png">
                             <img src="icons/gmail.svg" class="iconFooter" alt="Instagram">
                         </a>
-                        <a href="mailto:michela.mariani01@gmail.com" target="_blank" class="mb-0 text-decoration-none white-text-title">michela.mariani01</a>
+                        <a href="mailto:michela.mariani01@gmail.com" target="_blank"
+                            class="mb-0 text-decoration-none white-text-title">michela.mariani01</a>
                     </div>
 
                     <div class="align-items-center col d-flex gap-3 pb-3">
-                        <a href="https://www.linkedin.com/in/michela-mariani-6a2372271/" class="social-link" target="_blank" data-hover="linkedinHover.png">
+                        <a href="https://www.linkedin.com/in/michela-mariani-6a2372271/" class="social-link"
+                            target="_blank" data-hover="linkedinHover.png">
                             <img src="icons/linkedin.svg" class="iconFooter" alt="LinkedIn">
                         </a>
-                        <a href="https://www.linkedin.com/in/michela-mariani-6a2372271/" target="_blank" class="mb-0 text-decoration-none white-text-title">Michela Mariani</a>
+                        <a href="https://www.linkedin.com/in/michela-mariani-6a2372271/" target="_blank"
+                            class="mb-0 text-decoration-none white-text-title">Michela Mariani</a>
                     </div>
 
                     <div class="align-items-center col d-flex gap-3 pb-3">
-                        <a href="https://github.com/onlymiki" class="social-link" target="_blank" data-hover="gitHover.png">
+                        <a href="https://github.com/onlymiki" class="social-link" target="_blank"
+                            data-hover="gitHover.png">
                             <img src="icons/github.svg" class="iconFooter" alt="GitHub">
                         </a>
-                        <a href="https://github.com/onlymiki" target="_blank" class="mb-0 text-decoration-none white-text-title">only.miki</a>
+                        <a href="https://github.com/onlymiki" target="_blank"
+                            class="mb-0 text-decoration-none white-text-title">only.miki</a>
                     </div>
                 </div>
             </div>
