--- a/sam.html
+++ b/sam.html
@@ -10,7 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css">
-
+    <link rel="shortcut icon" href="/icons/logo.svg" type="image/x-icon">
 </head>
 
 <body class="bg-blue">
@@ -18,7 +18,7 @@
     <!-- Header -->
     <nav class="navbar navbar-expand-md px-md-4 p-0 header">
         <!-- Logo -->
-        <a class="navbar-brand ps-4" href="#">
+        <a class="navbar-brand ps-4" href="index.html">
             <img src="icons/logo.svg" alt="logo" style="height: 40px;">
         </a>
 
@@ -45,7 +45,7 @@
     <!-- Sezione presentazione progetto iniziale -->
     <div class="container my-5 px-5">
         <div class="align-items-center justify-content-center text-center text-md-start row">
-            <img src="img/miniatura_SAM.svg" class="col-12 col-md-6 img-fluid img-portrait pb-2 pb-md-0">
+            <img src="img/miniatura_SAM.svg" class="col-12 col-md-6 img-fluid img-portrait pb-2 pb-md-0" alt="miniatura progetto">
             <div class="col-12 col-md-6 display-5 white-text-title">
                 PROGETTO IN WORDPRESS -
                 SAM
@@ -100,7 +100,7 @@
 
     <!-- Separatore -->
     <div class="d-flex justify-content-center w-100">
-        <img src="/icons/diamante_stella.svg" class="img-fluid px-3">
+        <img src="/icons/diamante_stella.svg" class="img-fluid px-3" alt="separatore">
     </div>
 
     <!-- Sezione immagine in alto - testo in basso -->
@@ -146,12 +146,12 @@
 
     <!-- Sezione immagine 404 -->
     <div class="container d-flex justify-content-center mb-5 w-100">
-        <img src="/img/SAM/img_404.svg" class="img-fluid px-3">
+        <img src="/img/SAM/img_404.svg" class="img-fluid px-3" alt="miniatura progetto">
     </div>
 
     <!-- Separatore -->
     <div class="d-flex justify-content-center w-100">
-        <img src="/icons/diamante_stella.svg" class="img-fluid px-3">
+        <img src="/icons/diamante_stella.svg" class="img-fluid px-3" alt="separatore">
     </div>
 
     <!-- PDF -->
@@ -174,7 +174,7 @@
                     class="white-text-title h5 text-decoration-none">Clicca qui per aprire il PDF</a>
             </div>
             <div class="align-items-center col-md-6 d-none d-md-flex justify-content-center">
-                <img src="/img/SAM/lampada.svg" class="img-fluid img-portrait">
+                <img src="/img/SAM/lampada.svg" class="img-fluid img-portrait" alt="immagine laterale lampada">
             </div>
         </div>
 
@@ -183,9 +183,20 @@
     <!-- Sezione torna alla home -->
     <div class="container d-flex justify-content-center my-5 pt-5">
         <div class="d-flex justify-content-center justify-content-sm-start">
-            <img src="icons/white_star.svg" class="pe-3">
-            <a href="index.html" class="h4 white-text-title text-decoration-none">Torna alla Home</a>
-            <img src="icons/white_star.svg" class="ps-3">
+            <img src="icons/white_star.svg" class="pe-3" alt="decorazione">
+            <a href="index.html" class="h4 white-text-title text-decoration-none text-center">Torna alla Home</a>
+            <img src="icons/white_star.svg" class="ps-3" alt="decorazione">
+        </div>
+    </div>
+
+    <div class="container d-flex justify-content-center my-5 pt-5">
+        <div class="d-flex justify-content-between w-100">
+            <a href="tesi.html" class="h6 white-text-title text-decoration-none text-center">
+                <img src="icons/arrow_left.svg" alt="freccia"> Precedente
+            </a>
+            <a href="ergonomia.html" class="h6 white-text-title text-decoration-none text-center">
+                Successivo <img src="icons/arrow_right.svg" alt="freccia">
+            </a>
         </div>
     </div>
 
