--- a/tesi.html
+++ b/tesi.html
@@ -10,7 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css">
-
+    <link rel="shortcut icon" href="/icons/logo.svg" type="image/x-icon">
 </head>
 
 <body class="bg-blue">
@@ -45,7 +45,7 @@
     <!-- Sezione presentazione progetto iniziale -->
     <div class="container my-5 px-5">
         <div class="align-items-center justify-content-center text-center text-md-start row">
-            <img src="img/Tesi/miniatura_tesi.svg" class="col-12 col-md-6 img-fluid img-portrait pb-2 pb-md-0">
+            <img src="img/Tesi/miniatura_tesi.svg" class="col-12 col-md-6 img-fluid img-portrait pb-2 pb-md-0" alt="miniatura progetto">
             <div class="col-12 col-md-6 display-5 white-text-title">
                 Stage e tesi di laurea magistrale
             </div>
@@ -84,7 +84,7 @@
 
     <!-- Separatore -->
     <div class="d-flex justify-content-center w-100">
-        <img src="/icons/diamante_stella.svg" class="img-fluid px-3">
+        <img src="/icons/diamante_stella.svg" class="img-fluid px-3" alt="separatore">
     </div>
 
     <!-- Sezione fasi di sviluppo -->
@@ -95,7 +95,6 @@
             mie competenze pratiche nell’uso di Unity, apprendere un nuovo linguaggio di programmazione (AgentSpeak) e
             affinare le mie capacità di analisi della letteratura scientifica. Mentre lo stage, quindi la parte pratica
             e di ricerca, è terminato, la tesi è ancora in corso.</p>
-        </p>
     </div>
 
     <!-- Sezione il mio contributo -->
@@ -116,17 +115,28 @@
     <!-- Sezione immagini -->
     <div
         class="align-items-center d-flex flex-column flex-md-row gap-4 gam-md-0 justify-content-center px-5 my-4 w-100">
-        <img src="/img/Tesi/agenti_prima.svg" class="img-fluid px-3 w-50" alt="volantino a5">
-        <img src="/img/Tesi/agenti_dopo.svg" class="img-fluid px-3 w-50" alt="volantino a5">
+        <img src="/img/Tesi/agenti_prima.svg" class="img-fluid px-3 w-50" alt="agenti prima">
+        <img src="/img/Tesi/agenti_dopo.svg" class="img-fluid px-3 w-50" alt="agenti dopo">
     </div>
 
     <!-- Sezione torna alla home -->
     <div class="container d-flex justify-content-center mb-5 pt-5">
 
         <div class="d-flex justify-content-center justify-content-sm-start">
-            <img src="icons/white_star.svg" class="pe-3">
+            <img src="icons/white_star.svg" class="pe-3" alt="decorazione">
             <a href="index.html" class="h4 white-text-title text-decoration-none">Torna alla Home</a>
-            <img src="icons/white_star.svg" class="ps-3">
+            <img src="icons/white_star.svg" class="ps-3" alt="decorazione">
+        </div>
+    </div>
+
+    <div class="container d-flex justify-content-center my-5 pt-5">
+        <div class="d-flex justify-content-between w-100">
+            <a href="mbrunners.html" class="h6 white-text-title text-decoration-none text-center">
+                <img src="icons/arrow_left.svg" alt="freccia"> Precedente
+            </a>
+            <a href="sam.html" class="h6 white-text-title text-decoration-none text-center">
+                Successivo <img src="icons/arrow_right.svg" alt="freccia">
+            </a>
         </div>
     </div>
 
