--- a/volantino.html
+++ b/volantino.html
@@ -10,7 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css">
-
+    <link rel="shortcut icon" href="/icons/logo.svg" type="image/x-icon">
 </head>
 
 <body class="bg-blue">
@@ -45,7 +45,8 @@
     <!-- Sezione presentazione progetto iniziale -->
     <div class="container my-5 px-5">
         <div class="align-items-center justify-content-center text-center text-md-start row">
-            <img src="img/miniatura_volantino.svg" class="col-12 col-md-6 img-fluid img-portrait pb-2 pb-md-0">
+            <img src="img/miniatura_volantino.svg" class="col-12 col-md-6 img-fluid img-portrait pb-2 pb-md-0"
+                alt="miniatura progetto">
             <div class="col-12 col-md-6 display-5 white-text-title">
                 VOLANTINO per Pizzeria La Cometa
             </div>
@@ -64,12 +65,15 @@
     </div>
 
     <div class="container mb-5 px-md-5">
-        <div class="row">
-            <div class="col-12">
-                <h4 class="white-text-title">Volantino di partenza</h4>
-                <p class="white-text mb-0">Inserire immagine</p>
-            </div>
-        </div>
+        <h4 class="white-text-title">Volantino di partenza</h4>
+        <a href="img/Volantino/volantino_vecchio.pdf" target="_blank"
+            class="white-text-title h5 text-decoration-none">Clicca
+            qui per scaricare il pdf - migliore risoluzione</a>
+    </div>
+
+    <div class="align-items-center d-flex flex-column gap-4 justify-content-center px-5 w-100 mb-5">
+        <img src="/img/Volantino/volantino_vecchio1.png" class="img-fluid px-5" alt="volantino interno">
+        <img src="/img/Volantino/volantino_vecchio2.png" class="img-fluid px-5" alt="volantino esterno">
     </div>
 
     <div class="container mb-5 px-md-5">
@@ -82,11 +86,10 @@
         <img src="/img/Volantino/volantino2.svg" class="img-fluid px-5" alt="volantino interno">
         <img src="/img/Volantino/volantino1.svg" class="img-fluid px-5" alt="volantino esterno">
     </div>
-    </div>
 
     <!-- Separatore -->
     <div class="d-flex justify-content-center w-100">
-        <img src="/icons/diamante_stella.svg" class="img-fluid px-3">
+        <img src="/icons/diamante_stella.svg" class="img-fluid px-3" alt="separatore">
     </div>
 
     <!-- Sezione fasi di sviluppo -->
@@ -110,9 +113,20 @@
     <!-- Sezione torna alla home -->
     <div class="container d-flex justify-content-center my-5 pt-5">
         <div class="d-flex justify-content-center justify-content-sm-start">
-            <img src="icons/white_star.svg" class="pe-3">
+            <img src="icons/white_star.svg" class="pe-3" alt="decorazione">
             <a href="index.html" class="h4 white-text-title text-decoration-none">Torna alla Home</a>
-            <img src="icons/white_star.svg" class="ps-3">
+            <img src="icons/white_star.svg" class="ps-3" alt="decorazione">
+        </div>
+    </div>
+
+    <div class="container d-flex justify-content-center my-5 pt-5">
+        <div class="d-flex justify-content-between w-100">
+            <a href="cvedi.html" class="h6 white-text-title text-decoration-none text-center">
+                <img src="icons/arrow_left.svg" alt="freccia"> Precedente
+            </a>
+            <a href="mbrunners.html" class="h6 white-text-title text-decoration-none text-center">
+                Successivo <img src="icons/arrow_right.svg" alt="freccia">
+            </a>
         </div>
     </div>
 
@@ -124,7 +138,8 @@
                 <ul class="list-unstyled text-center text-md-start">
                     <li class="pb-3"><a href="index.html" class="h4 text-decoration-none">Home</a></li>
                     <li class="pb-3"><a href="index.html#aboutme" class="h4 text-decoration-none">About Me</a></li>
-                    <li class="pb-3"><a href="index.html#image-text-slider" class="h4 text-decoration-none">Projects</a></li>
+                    <li class="pb-3"><a href="index.html#image-text-slider" class="h4 text-decoration-none">Projects</a>
+                    </li>
                 </ul>
             </div>
 
@@ -133,24 +148,30 @@
                 class="align-items-center col-12 col-md-4 d-flex justify-content-center justify-content-md-start text-center text-md-start socialCol">
                 <div class="d-block row align-items-center justify-content-center">
                     <div class="align-items-center col d-flex gap-3 pb-3">
-                        <a href="mailto:michela.mariani01@gmail.com" target="_blank" class="social-link" data-hover="instagramHover.png">
+                        <a href="mailto:michela.mariani01@gmail.com" target="_blank" class="social-link"
+                            data-hover="instagramHover.png">
                             <img src="icons/gmail.svg" class="iconFooter" alt="Instagram">
                         </a>
-                        <a href="mailto:michela.mariani01@gmail.com" target="_blank" class="mb-0 text-decoration-none white-text-title">michela.mariani01</a>
+                        <a href="mailto:michela.mariani01@gmail.com" target="_blank"
+                            class="mb-0 text-decoration-none white-text-title">michela.mariani01</a>
                     </div>
 
                     <div class="align-items-center col d-flex gap-3 pb-3">
-                        <a href="https://www.linkedin.com/in/michela-mariani-6a2372271/" class="social-link" target="_blank" data-hover="linkedinHover.png">
+                        <a href="https://www.linkedin.com/in/michela-mariani-6a2372271/" class="social-link"
+                            target="_blank" data-hover="linkedinHover.png">
                             <img src="icons/linkedin.svg" class="iconFooter" alt="LinkedIn">
                         </a>
-                        <a href="https://www.linkedin.com/in/michela-mariani-6a2372271/" target="_blank" class="mb-0 text-decoration-none white-text-title">Michela Mariani</a>
+                        <a href="https://www.linkedin.com/in/michela-mariani-6a2372271/" target="_blank"
+                            class="mb-0 text-decoration-none white-text-title">Michela Mariani</a>
                     </div>
 
                     <div class="align-items-center col d-flex gap-3 pb-3">
-                        <a href="https://github.com/onlymiki" class="social-link" target="_blank" data-hover="gitHover.png">
+                        <a href="https://github.com/onlymiki" class="social-link" target="_blank"
+                            data-hover="gitHover.png">
                             <img src="icons/github.svg" class="iconFooter" alt="GitHub">
                         </a>
-                        <a href="https://github.com/onlymiki" target="_blank" class="mb-0 text-decoration-none white-text-title">only.miki</a>
+                        <a href="https://github.com/onlymiki" target="_blank"
+                            class="mb-0 text-decoration-none white-text-title">only.miki</a>
                     </div>
                 </div>
             </div>
