--- a/vr.html
+++ b/vr.html
@@ -18,7 +18,7 @@
     <!-- Header -->
     <nav class="navbar navbar-expand-md px-md-4 p-0 header">
         <!-- Logo -->
-        <a class="navbar-brand ps-4" href="#">
+        <a class="navbar-brand ps-4" href="index.html">
             <img src="icons/logo.svg" alt="logo" style="height: 40px;">
         </a>
 
@@ -45,7 +45,7 @@
     <!-- Sezione presentazione progetto iniziale -->
     <div class="container my-5 px-5">
         <div class="align-items-center justify-content-center text-center text-md-start row">
-            <img src="img/miniatura_VR.svg" class="col-12 col-md-6 img-fluid img-portrait pb-2 pb-md-0">
+            <img src="img/miniatura_VR.svg" class="col-12 col-md-6 img-fluid img-portrait pb-2 pb-md-0" alt="miniatura progetto">
             <div class="col-12 col-md-6 display-5 white-text-title">
                 PROGETTO REALTÀ VIRTUALE
             </div>
@@ -100,7 +100,7 @@
 
     <!-- Separatore -->
     <div class="d-flex justify-content-center w-100">
-        <img src="/icons/diamante_stella.svg" class="img-fluid px-3">
+        <img src="/icons/diamante_stella.svg" class="img-fluid px-3" alt="separatore">
     </div>
 
     <!-- Sezione immagine in alto - testo in basso -->
@@ -154,7 +154,7 @@
 
     <!-- Sezione immagine 404 -->
     <div class="container d-flex flex-column justify-content-center mb-5 w-100">
-        <video controls class="img-fluid px-5" alt="Video della Stanza di Simulazione: interfaccia di controllo">
+        <video controls class="img-fluid px-5">
             <source src="/img/VR/stanza_simulazione.mp4" type="video/mp4">
             Il tuo browser non supporta la riproduzione del video.
         </video>
@@ -162,7 +162,7 @@
 
     <!-- Separatore -->
     <div class="d-flex justify-content-center w-100">
-        <img src="/icons/diamante_stella.svg" class="img-fluid px-3">
+        <img src="/icons/diamante_stella.svg" class="img-fluid px-3" alt="separatore">
     </div>
 
     <!-- PDF -->
@@ -193,9 +193,20 @@
     <!-- Sezione torna alla home -->
     <div class="container d-flex justify-content-center my-5 pt-5">
         <div class="d-flex justify-content-center justify-content-sm-start">
-            <img src="icons/white_star.svg" class="pe-3">
+            <img src="icons/white_star.svg" class="pe-3" alt="decorazione">
             <a href="index.html" class="h4 white-text-title text-decoration-none">Torna alla Home</a>
-            <img src="icons/white_star.svg" class="ps-3">
+            <img src="icons/white_star.svg" class="ps-3" alt="decorazione">
+        </div>
+    </div>
+
+    <div class="container d-flex justify-content-center my-5 pt-5">
+        <div class="d-flex justify-content-between w-100">
+            <a href="sistemi.html" class="h6 white-text-title text-decoration-none text-center">
+                <img src="icons/arrow_left.svg" alt="freccia"> Precedente
+            </a>
+            <a href="webApp.html" class="h6 white-text-title text-decoration-none text-center">
+                Successivo <img src="icons/arrow_right.svg" alt="freccia">
+            </a>
         </div>
     </div>
 
@@ -207,7 +218,8 @@
                 <ul class="list-unstyled text-center text-md-start">
                     <li class="pb-3"><a href="index.html" class="h4 text-decoration-none">Home</a></li>
                     <li class="pb-3"><a href="index.html#aboutme" class="h4 text-decoration-none">About Me</a></li>
-                    <li class="pb-3"><a href="index.html#image-text-slider" class="h4 text-decoration-none">Projects</a></li>
+                    <li class="pb-3"><a href="index.html#image-text-slider" class="h4 text-decoration-none">Projects</a>
+                    </li>
                 </ul>
             </div>
 
@@ -216,24 +228,30 @@
                 class="align-items-center col-12 col-md-4 d-flex justify-content-center justify-content-md-start text-center text-md-start socialCol">
                 <div class="d-block row align-items-center justify-content-center">
                     <div class="align-items-center col d-flex gap-3 pb-3">
-                        <a href="mailto:michela.mariani01@gmail.com" target="_blank" class="social-link" data-hover="instagramHover.png">
+                        <a href="mailto:michela.mariani01@gmail.com" target="_blank" class="social-link"
+                            data-hover="instagramHover.png">
                             <img src="icons/gmail.svg" class="iconFooter" alt="Instagram">
                         </a>
-                        <a href="mailto:michela.mariani01@gmail.com" target="_blank" class="mb-0 text-decoration-none white-text-title">michela.mariani01</a>
+                        <a href="mailto:michela.mariani01@gmail.com" target="_blank"
+                            class="mb-0 text-decoration-none white-text-title">michela.mariani01</a>
                     </div>
 
                     <div class="align-items-center col d-flex gap-3 pb-3">
-                        <a href="https://www.linkedin.com/in/michela-mariani-6a2372271/" class="social-link" target="_blank" data-hover="linkedinHover.png">
+                        <a href="https://www.linkedin.com/in/michela-mariani-6a2372271/" class="social-link"
+                            target="_blank" data-hover="linkedinHover.png">
                             <img src="icons/linkedin.svg" class="iconFooter" alt="LinkedIn">
                         </a>
-                        <a href="https://www.linkedin.com/in/michela-mariani-6a2372271/" target="_blank" class="mb-0 text-decoration-none white-text-title">Michela Mariani</a>
+                        <a href="https://www.linkedin.com/in/michela-mariani-6a2372271/" target="_blank"
+                            class="mb-0 text-decoration-none white-text-title">Michela Mariani</a>
                     </div>
 
                     <div class="align-items-center col d-flex gap-3 pb-3">
-                        <a href="https://github.com/onlymiki" class="social-link" target="_blank" data-hover="gitHover.png">
+                        <a href="https://github.com/onlymiki" class="social-link" target="_blank"
+                            data-hover="gitHover.png">
                             <img src="icons/github.svg" class="iconFooter" alt="GitHub">
                         </a>
-                        <a href="https://github.com/onlymiki" target="_blank" class="mb-0 text-decoration-none white-text-title">only.miki</a>
+                        <a href="https://github.com/onlymiki" target="_blank"
+                            class="mb-0 text-decoration-none white-text-title">only.miki</a>
                     </div>
                 </div>
             </div>
