--- a/webApp.html
+++ b/webApp.html
@@ -10,7 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css">
-
+    <link rel="shortcut icon" href="/icons/logo.svg" type="image/x-icon">
 </head>
 
 <body class="bg-blue">
@@ -18,7 +18,7 @@
     <!-- Header -->
     <nav class="navbar navbar-expand-md px-md-4 p-0 header">
         <!-- Logo -->
-        <a class="navbar-brand ps-4" href="#">
+        <a class="navbar-brand ps-4" href="index.html">
             <img src="icons/logo.svg" alt="logo" style="height: 40px;">
         </a>
 
@@ -45,7 +45,7 @@
     <!-- Sezione presentazione progetto iniziale -->
     <div class="container my-5 px-5">
         <div class="align-items-center justify-content-center text-center text-md-start row">
-            <img src="img/miniatura_web_app.svg" class="col-12 col-md-6 img-fluid img-portrait pb-2 pb-md-0">
+            <img src="img/miniatura_web_app.svg" class="col-12 col-md-6 img-fluid img-portrait pb-2 pb-md-0" alt="miniatura progetto">
             <div class="col-12 col-md-6 display-5 white-text-title">
                 PROGETTO REACT
             </div>
@@ -95,7 +95,7 @@
 
     <!-- Separatore -->
     <div class="d-flex justify-content-center w-100">
-        <img src="/icons/diamante_stella.svg" class="img-fluid px-3">
+        <img src="/icons/diamante_stella.svg" class="img-fluid px-3" alt="separatore">
     </div>
 
     <!-- Sezione immagine in alto - testo in basso -->
@@ -129,8 +129,8 @@
 
     <!-- Sezione immagini -->
     <div
-        class="align-items-md-start align-items-center d-flex flex-column flex-md-row gap-4 justify-content-center  my-4 w-100">
-        <img src="/img/WebApp/Moodboard.svg" class="img-fluid px-3" style="max-width: 600px;" alt="Moodboard">
+        class="align-items-md-start align-items-center container d-flex flex-column flex-md-row gap-4 justify-content-center  my-4 w-100">
+        <img src="/img/WebApp/Moodboard.svg" class="img-fluid px-5" alt="Moodboard">
     </div>
 
     <!-- Sezione il mio contributo -->
@@ -148,7 +148,7 @@
 
     <!-- Separatore -->
     <div class="d-flex justify-content-center w-100">
-        <img src="/icons/diamante_stella.svg" class="img-fluid px-3">
+        <img src="/icons/diamante_stella.svg" class="img-fluid px-3" alt="separatore">
     </div>
 
     <!-- PDF -->
@@ -179,9 +179,20 @@
     <!-- Sezione torna alla home -->
     <div class="container d-flex justify-content-center my-5 pt-5">
         <div class="d-flex justify-content-center justify-content-sm-start">
-            <img src="icons/white_star.svg" class="pe-3">
+            <img src="icons/white_star.svg" class="pe-3" alt="decorazione">
             <a href="index.html" class="h4 white-text-title text-decoration-none">Torna alla Home</a>
-            <img src="icons/white_star.svg" class="ps-3">
+            <img src="icons/white_star.svg" class="ps-3" alt="decorazione">
+        </div>
+    </div>
+
+    <div class="container d-flex justify-content-center my-5 pt-5">
+        <div class="d-flex justify-content-between w-100">
+            <a href="vr.html" class="h6 white-text-title text-decoration-none text-center">
+                <img src="icons/arrow_left.svg" alt="freccia"> Precedente
+            </a>
+            <a href="cvedi.html" class="h6 white-text-title text-decoration-none text-center">
+                Successivo <img src="icons/arrow_right.svg" alt="freccia">
+            </a>
         </div>
     </div>
 
