Fixed some details

--- a/cvedi.html
+++ b/cvedi.html
@@ -177,7 +177,7 @@
                     <li>Spiegazione codice</li>
                 </ul>
                 <a href="img/CVeDI/Presentazione.pdf" target="_blank"
-                    class="white-text-title h5 text-decoration-none">Clicca qui per aprire la presentazione</a>
+                    class="white-text-title h5 text-decoration-none">Clicca qui per aprire la presentazione<br></a>
                 <a href="img/CVeDI/Design_system.pdf" target="_blank"
                     class="white-text-title h5 text-decoration-none">Clicca qui per aprire il design system</a>
             </div>
@@ -192,7 +192,7 @@
     <div class="container d-flex justify-content-center my-5 pt-5">
         <div class="d-flex justify-content-center justify-content-sm-start">
             <img src="icons/white_star.svg" class="pe-3" alt="decorazione">
-            <a href="index.html" class="h4 white-text-title text-decoration-none">Torna alla Home</a>
+            <a href="index.html" class="h4 white-text-title text-decoration-none text-center">Torna alla Home</a>
             <img src="icons/white_star.svg" class="ps-3" alt="decorazione">
         </div>
     </div>
