--- a/ergonomia.html
+++ b/ergonomia.html
@@ -106,9 +106,9 @@
         <div class="row justify-content-center">
             <div class="col-md-8 col-12">
                 <p class="white-text">
-                    Io e il mio gruppo abbiamo scelto come argomento da analizzare e portare come progetto per il corso
+                    Io e il mio gruppo abbiamo scelto come argomento da analizzare e portare, come progetto per il corso
                     di Ergonomia
-                    Cognitiva la skincare ovvero la cura della pelle.
+                    Cognitiva, la skincare ovvero la cura della pelle.
                     In particolare, abbiamo sviluppato un prototipo di una applicazione chiamata Peachy in grado di
                     aiutare gli utenti a
                     prendersi cura della propria pelle, questo mettendo in pratica le tecniche imparate a lezione e
