--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
         <div class="align-items-center d-md-flex gap-5 justify-content-center text-center text-md-start">
             <img src="img/immagine_curriculum.svg" class="img-fluid img-home pb-2 pb-md-0" alt="foto profilo">
             <div>
-                <h4 class="orange-text-title">Michela Mariani</h4>
-                <h5 class="pb-2 white-text-title">24 anni</h5>
+                <h4 class="orange-text-title"><strong>Michela Mariani</strong></h4>
+                <h5 class="white-text-title pb-2">24 anni</h5>
                 <p class="px-5 px-md-0 pb-2 white-text">
                     Sono Michela Mariani, ho 24 anni e attualmente
                     sono laureanda del corso magistrale di Teoria e
@@ -330,7 +330,7 @@
                         <p class="white-text px-3">
                             In gruppo, abbiamo sviluppato un'esperienza ambientata nello spazio che si
                             articola in tre scene: l'esplorazione di un pianeta, lo svolgimento di una simulazione
-                            all'interno della navicella, e l'esecuzione del decollo. Il progetto è stato realizzato con
+                            all'interno della navicella e l'esecuzione del decollo. Il progetto è stato realizzato con
                             Unity e sviluppato per essere testabile su PC. Mi sono concentrata
                             sulla realizzazione della Scena di Simulazione, curando l'interazione con l'astronauta,
                             l'implementazione del meccanismo di gioco con pulsanti per avviare e terminare la
