--- a/mbrunners.html
+++ b/mbrunners.html
@@ -131,7 +131,7 @@
 
         <div class="d-flex justify-content-center justify-content-sm-start">
             <img src="icons/white_star.svg" class="pe-3" alt="decorazione">
-            <a href="index.html" class="h4 white-text-title text-decoration-none">Torna alla Home</a>
+            <a href="index.html" class="h4 white-text-title text-decoration-none text-center">Torna alla Home</a>
             <img src="icons/white_star.svg" class="ps-3" alt="decorazione">
         </div>
     </div>
