--- a/sistemi.html
+++ b/sistemi.html
@@ -122,8 +122,8 @@
         <h4 class="white-text-title">Fasi di sviluppo</h4>
         <p class="white-text mb-0">Il progetto si è sviluppato seguendo la metodologia per la modellazione dei sistemi
             informativi. Come prima cosa abbiamo effettuato la "Descrizione dei processi" individuando le attività
-            principali e gli attori coinvolti. Successivamente abbiamo dfinito gli Use
-            Cases per ciascun processo. Il cuore del lavoro è stata la modellazione con i diagrammi **BPMN** e la
+            principali e gli attori coinvolti. Successivamente abbiamo definito gli Use
+            Cases per ciascun processo. Il cuore del lavoro è stata la modellazione con i diagrammi BPMN e la
             gestione dei casi con CMMN. Infine, abbiamo definito le regole di business con DMN e progettato
             l'interfaccia utente necessaria tramite IFML e Wireframe.
         </p>
@@ -185,7 +185,7 @@
     <div class="container d-flex justify-content-center my-5 pt-5">
         <div class="d-flex justify-content-center justify-content-sm-start">
             <img src="icons/white_star.svg" class="pe-3" alt="decorazione">
-            <a href="index.html" class="h4 white-text-title text-decoration-none">Torna alla Home</a>
+            <a href="index.html" class="h4 white-text-title text-decoration-none text-center">Torna alla Home</a>
             <img src="icons/white_star.svg" class="ps-3" alt="decorazione">
         </div>
     </div>
