--- a/volantino.html
+++ b/volantino.html
@@ -96,7 +96,7 @@
     <div class="container my-5">
         <h4 class="white-text-title">Altri lavori per Pizzeria La Cometa</h4>
         <p class="white-text mb-0">Ho realizzato sfruttando Figma e Canva anche diversi post instagram e un volantino
-            aggiuntivo formato A5 da distirbuire insieme al volantino standard.</p>
+            aggiuntivo formato A5 da distribuire insieme al volantino standard.</p>
     </div>
 
     <!-- Sezione immagini -->
@@ -114,7 +114,7 @@
     <div class="container d-flex justify-content-center my-5 pt-5">
         <div class="d-flex justify-content-center justify-content-sm-start">
             <img src="icons/white_star.svg" class="pe-3" alt="decorazione">
-            <a href="index.html" class="h4 white-text-title text-decoration-none">Torna alla Home</a>
+            <a href="index.html" class="h4 white-text-title text-decoration-none text-center">Torna alla Home</a>
             <img src="icons/white_star.svg" class="ps-3" alt="decorazione">
         </div>
     </div>
