--- a/vr.html
+++ b/vr.html
@@ -68,7 +68,7 @@
         <div class="row">
             <div class="col-12 col-md-6">
                 <h4 class="white-text-title">Consegna</h4>
-                <p class="white-text mb-0">Realizzare e documentare, tramite il motore Unity, un'applicazione di Realtà
+                <p class="white-text mb-0">Realizzare e documentare, tramite Unity, un'applicazione di Realtà
                     Virtuale (gioco, simulazione, training, ecc.) che sia sensata e realistica. L'applicazione deve
                     dimostrare padronanza delle interazioni VR, includendo elementi essenziali come la manipolazione di
                     oggetti, l'uso di animazioni, la fisica e la navigazione dell'utente all'interno dell'ambiente 3D. È
@@ -84,7 +84,7 @@
                 <p class="white-text mb-0">La relazione deve contenere:</p>
                 <ul class="white-text">
                     <li>Gruppo: 2 o massimo 3 persone</li>
-                    <li>Compatibilità: Deve funzionare su Oculus Meta Quest 2 e anche con Mouse e Tastiera.</li>
+                    <li>Compatibilità: Deve funzionare su Oculus Meta Quest 2 e/o con Mouse e Tastiera.</li>
                     <li>Implementazione Tecnica: Ogni membro del gruppo deve creare almeno una scena che includa:
                         interazioni
                         tramite mani/raycast, un socket, GUI, un sistema di movimento (incluso il teletrasporto in
@@ -154,7 +154,7 @@
 
     <!-- Sezione immagine 404 -->
     <div class="container d-flex flex-column justify-content-center mb-5 w-100">
-        <video controls class="img-fluid px-5">
+        <video controls muted class="img-fluid px-5">
             <source src="/img/VR/stanza_simulazione.mp4" type="video/mp4">
             Il tuo browser non supporta la riproduzione del video.
         </video>
@@ -194,7 +194,7 @@
     <div class="container d-flex justify-content-center my-5 pt-5">
         <div class="d-flex justify-content-center justify-content-sm-start">
             <img src="icons/white_star.svg" class="pe-3" alt="decorazione">
-            <a href="index.html" class="h4 white-text-title text-decoration-none">Torna alla Home</a>
+            <a href="index.html" class="h4 white-text-title text-decoration-none text-center">Torna alla Home</a>
             <img src="icons/white_star.svg" class="ps-3" alt="decorazione">
         </div>
     </div>
